cmake_minimum_required(VERSION 3.15)
set(PROJECT_NAME leetcode-cpp)
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 11)

include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_LIST_DIR}/common)
include_directories(${CMAKE_CURRENT_LIST_DIR}/tree)
include_directories(${CMAKE_CURRENT_LIST_DIR}/list)
include_directories(${CMAKE_CURRENT_LIST_DIR}/dfs)
include_directories(${CMAKE_CURRENT_LIST_DIR}/bfs)
include_directories(${CMAKE_CURRENT_LIST_DIR}/LRU)
include_directories(${CMAKE_CURRENT_LIST_DIR}/dp)
include_directories(${CMAKE_CURRENT_LIST_DIR}/array)
include_directories(${CMAKE_CURRENT_LIST_DIR}/string)
include_directories(${CMAKE_CURRENT_LIST_DIR}/stack)
include_directories(${CMAKE_CURRENT_LIST_DIR}/UnionFound)
include_directories(${CMAKE_CURRENT_LIST_DIR}/topology)
include_directories(${CMAKE_CURRENT_LIST_DIR}/greedy)
include_directories(${CMAKE_CURRENT_LIST_DIR}/SlideWindow)
include_directories(${CMAKE_CURRENT_LIST_DIR}/PrefixSumHash)
include_directories(${CMAKE_CURRENT_LIST_DIR}/diff)
include_directories(${CMAKE_CURRENT_LIST_DIR}/trie)
include_directories(${CMAKE_CURRENT_LIST_DIR}/dichotomy)
include_directories(${CMAKE_CURRENT_LIST_DIR}/operation)

aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/common SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/tree SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/list SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/dfs SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/bfs SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/dp SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/array SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/string SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/stack SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/UnionFound SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/topology SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/greedy SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/SlideWindow SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/PrefixSumHash SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/diff SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/trie SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/dichotomy SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/operation SOURCES)

add_executable(${PROJECT_NAME} main.cpp ${SOURCES})

add_definitions(-g)