cmake_minimum_required(VERSION 3.15)
set(PROJECT_NAME leetcode-cpp)
project(${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 11)

include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_LIST_DIR}/common)

aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SOURCES)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/common SOURCES)

add_subdirectory(array)
add_subdirectory(bfs)
add_subdirectory(DataStructure)
add_subdirectory(dfs)
add_subdirectory(dichotomy)
add_subdirectory(diff)
add_subdirectory(DoublePoint)
add_subdirectory(dp)
add_subdirectory(greedy)
add_subdirectory(hash)
add_subdirectory(list)
add_subdirectory(LRU)
add_subdirectory(math)
add_subdirectory(operation)
add_subdirectory(PrefixSumHash)
add_subdirectory(queue)
add_subdirectory(regex)
add_subdirectory(SlideWindow)
add_subdirectory(stack)
add_subdirectory(string)
add_subdirectory(topology)
add_subdirectory(tree)
add_subdirectory(trie)
add_subdirectory(UnionFound)
